[package]
name = "poetic_interpreter"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
poetic = "0.2.0"
atty = "0.2.14"
clap = { version = "3.1.8", features = ["derive"] }
